# simple_rl

./: .gitignore  README.md  extract_tests.py  pyproject.toml  reorganize_tests.py  requirements.txt  run_jupyter.sh  run_tests.sh  setup.py  setup.sh  test_grpo.py  test_simple_rl.ipynb
configs/: grpo_config.yaml
examples/: README.md  basic_usage.py  config_based_training.py  custom_optimizer_example.py  finetune_config.yaml  finetune_example.py  train_with_custom_model.py
how_to/: QUICKSTART.md  custom_datasets.md  custom_rewards.md  customize_prompts.md  getting_started.md  run_grpo_training.md
notebooks/: grpo_qwen_training.ipynb  supervised_learning_example.ipynb
plans/: grpo_implementation_plan.md
scripts/: run_jupyter.sh  run_tests.sh  setup.sh  setup_env.sh
simple_rl/: __init__.py
simple_rl/algorithms/: __init__.py  base.py  grpo.py  supervised_learning.py
simple_rl/config/: __init__.py  default.yaml  grpo_config.yaml
simple_rl/config/algorithms/: base_rl.yaml  custom_optimizer.yaml  supervised_learning.yaml
simple_rl/scripts/: train.py
simple_rl/utils/: __init__.py  config.py  config_builder.py  data.py  huggingface_wrappers.py  logging.py  optimizer_factory.py
tests/: README.md  conftest.py  test_grpo.py  test_grpo_extensive.py  test_grpo_prompts.py  test_model_finetuning.py  test_overfitting.py
tests/algorithms/: __init__.py
tests/algorithms/grpo/: __init__.py  test_basic.py  test_edge_cases.py  test_masking.py  test_performance.py  test_prompts.py  test_rewards.py  test_stability.py  test_training.py
tests/algorithms/supervised_learning/: __init__.py  test_basic.py  test_finetuning.py  test_optimization.py  test_overfitting.py
